fix z-index header

--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -6,6 +6,7 @@
     top: 0;
     width: 100%;
     height: auto;
+    z-index: 10;
 }
 
 .header_logo {
